# deckback

./: .clang-format  .clangd  .env.example  .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  DEPS.pin  LICENSE  NOTICE  README.md  RELEASING.md  docker-compose.yml  justfile
.githooks/: pre-push
.github/workflows/: lint.yml  release.yml
.internal/: HARNESS.md  MIGRATION.md  TASKS.md  TEST-PLAN.md  configurator-plan.md  exit-design.md  osd-menu-plan.md  steamdeck-cobalt-youtube-plan.md
.internal/findings/: README.md
.internal/findings/durable/: architecture.md  build-slimming.md  dbus-reconnect.md  decisions.md  hardware.md  harness.md  input-ux.md  keep-awake.md  one-line-install.md  packaging-toolchain.md  packaging.md  page-scripts.md  pip.md  platform.md  preflight-parity.md  preview.md  self-update.md  strategy.md  test-sim.md  touch-lock.md
.internal/findings/milestones/: TEMPLATE.md  m114.md  m138.md
args/: asan.gn  common.gn  deck.gn  dev.gn
config/: app.json  av1_steering.js  no_pointer.js  steam_input.vdf
config/scripts/: chapter_seek.js  error_page.js  mic_probe.js  osd.js  osd_button.js  osd_button_hide.js  overlay.js  overlay_hide.js  player_pause.js  player_play.js  player_state.js  skip.js  toast.js  toast_hide.js  toggle_captions.js  update_badge.js  update_badge_hide.js  update_card.js  update_card_hide.js  voice_mute.js  voice_pause.js  voice_play.js  voice_unmute.js
docker/: Dockerfile  sim.Dockerfile  steamos-baseline.env  steamos.Dockerfile
docs/: HOW-IT-WORKS.md  SUPPORT.md  legal.md
flathub/: SUBMISSION.md  apply_extra  cobalt-zypak.sh  io.github.properrr.deckback.yaml
flatpak/: deckback.flatpakrepo  io.github.properrr.deckback.flatpakref  io.github.properrr.deckback.yml
flatpak/assets/: README.md  cobalt-zypak.sh  deckback.sh  io.github.properrr.deckback.desktop  io.github.properrr.deckback.metainfo.xml  render-assets.sh
flatpak/pages/: index.html
launcher/: .clangd  CMakeLists.txt  version.hpp.in
launcher/src/: about.cpp  about.hpp  audio.cpp  audio.hpp  caption_settings.cpp  caption_settings.hpp  cdm_fetcher.cpp  cdm_fetcher.hpp  config.cpp  config.hpp  config_store.cpp  config_store.hpp  devtools.cpp  devtools.hpp  errorpage.cpp  errorpage.hpp  fileio.cpp  fileio.hpp  haptic.cpp  haptic.hpp  http.cpp  http.hpp  input.cpp  input.hpp  json.cpp  json.hpp  keymap.cpp  keymap.hpp  layers.cpp  layers.hpp  log.cpp  log.hpp  main.cpp  navigator.cpp  navigator.hpp  netprobe.cpp  netprobe.hpp  onboarding.cpp  onboarding.hpp  osdmenu.cpp  (+31 more)
launcher/tests/: about_test.cpp  caption_fuzz_test.cpp  caption_settings_test.cpp  cdm_fetcher_test.cpp  config_store_test.cpp  config_test.cpp  devtools_test.cpp  errorpage_test.cpp  fake_cdp_server.hpp  group_cdp.cpp  group_pure.cpp  group_sys.cpp  group_ui.cpp  harness.hpp  input_test.cpp  json_test.cpp  log_test.cpp  navigator_test.cpp  onboarding_test.cpp  osdmenu_test.cpp  overlay_test.cpp  player_test.cpp  profile_test.cpp  scripts_test.cpp  sha256_test.cpp  touchmode_test.cpp  updateprompt_test.cpp  updater_test.cpp  util_test.cpp  voice_test.cpp  watchdog_test.cpp
patches/: 0001-Register-a-user-installed-Widevine-CDM-in-content_sh-widevine-cdm-registration.patch  0002-Disable-content_shell-web-test-harness-disable-web-tests.patch  README.md  series
scripts/: audio-repair.sh  bootstrap.sh  build.sh  cdp.py  cert.py  cert.sh  compdb.sh  debug.sh  deck-ci.py  deck-ci.sh  deck-flatpak.sh  deckback-audio-repair.service  deckback-idle-nudge.service  deckctl.py  deploy.sh  flathub-prep.sh  flatpak-lint.sh  flatpak.sh  fmt.sh  gen.sh  idle-nudge.py  install-audio-repair.sh  install-idle-nudge.sh  install.sh  launcher.sh  lib.sh  logs.sh  patch.sh  portal-poll.sh  power.sh  preflight.sh  publish-repo.sh  release-prep.sh  release.sh  remote-run.sh  run.sh  smoke.sh  soak.sh  steam_shortcuts.py  sync.sh  (+3 more)
scripts/lib/: cert_harness.py  deckci.py  exitcodes.py  flatpak_channel.sh  portal_poll.sh  power_adjudicate.awk  power_watts.awk
scripts/sim/: README.md  capture-deck-baseline.sh  incontainer.sh  portal-probe.sh  run.sh
tests/cert/: HARNESS.pin  vectors.sha256
tests/cert/expectations/: README.md  conformance-test.json
tests/deck/: conftest.py  test_capabilities.py  test_input.py  test_media.py  test_osd.py  test_touch.py  test_ux.py
tests/deck/lib/: probes.py  ssh.py  uinput.py
tests/harness/: run.sh  test_cdp_lib.py  test_cert.py  test_deck_env.sh  test_deck_lib.py  test_deckci.py  test_deckctl.py  test_flatpak.py  test_flatpak_channel.sh  test_idle_nudge.py  test_portal_poll.sh  test_power_adjudicate.sh  test_power_probe.sh  test_sim_guardrail.sh  test_steam_shortcuts.py  test_video_corruption.py
tests/js/: toggle_captions.test.js
