cmake_minimum_required(VERSION 3.28)
project(deckback_launcher LANGUAGES CXX)

# Out-of-tree code (doc §13.2): C++23, dual-clean on Clang >=18 and GCC 14, -Wall -Wextra -Werror.
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

add_compile_options(-Wall -Wextra -Werror)

set(DECKBACK_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")

# Embed a JS file as a C++ raw-string constant so a missing/unreadable file can NEVER silently
# disable the behaviour on the Deck (it fails the build instead). Each script is the single source of
# truth — the launcher compiles it in and `just smoke` injects the same file.
#
# The path is overridable because `launcher/` is not always built inside the repo. flatpak-builder
# copies each module's sources FLAT into /run/build/<module>/, so `../config/` does not exist there
# and `file(READ)` fails with CMake's own opaque "file failed to open for reading". The manifest
# passes -D<cache_var>=<basename> and adds the script as a second source. Default stays the in-repo
# layout, so `just launcher build` is unchanged.
function(deckback_embed_js cache_var default_rel header symbol fail_msg)
  set("${cache_var}" "${default_rel}"
      CACHE FILEPATH "JS to embed as ${symbol}, relative to launcher/ unless absolute")
  get_filename_component(_p "${${cache_var}}" ABSOLUTE BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
  if(NOT EXISTS "${_p}")
    message(FATAL_ERROR "embedded script not found: ${_p}\n"
      "Pass -D${cache_var}=<path>. ${fail_msg}")
  endif()
  file(READ "${_p}" _js)
  # A `)JS"` inside the script would terminate the raw literal early and produce a nonsense
  # diagnostic a hundred lines away. Refuse at configure time instead.
  string(FIND "${_js}" ")JS\"" _bad)
  if(NOT _bad EQUAL -1)
    message(FATAL_ERROR "${_p} contains the raw-string terminator )JS\" ")
  endif()
  file(WRITE "${DECKBACK_GENERATED_DIR}/${header}.in"
"#pragma once
// GENERATED by launcher/CMakeLists.txt from ${default_rel}. Do not edit; edit the .js.
namespace deckback {
inline constexpr const char* ${symbol} = R\"JS(${_js})JS\";
}  // namespace deckback
")
  # COPYONLY only rewrites when the content differs, so a plain re-configure does not force a rebuild.
  configure_file("${DECKBACK_GENERATED_DIR}/${header}.in"
                 "${DECKBACK_GENERATED_DIR}/${header}" COPYONLY)
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_p}")
endfunction()

# Embed the whole config/scripts/ directory as a name->body registry (scripts_registry.hpp), the
# single source of truth for every page-side script the launcher injects (ScriptLibrary, scripts.cpp).
# Same fail-closed rationale as deckback_embed_js: a missing/unreadable script fails the build, never
# silently ships a disabled behaviour. flatpak-builder copies the module's sources FLAT, so the dir is
# a cache var the manifest overrides to the flat basename ("scripts") and adds as a `type: dir` source.
set(DECKBACK_SCRIPTS_DIR "../config/scripts"
    CACHE PATH "Directory of page scripts to embed, relative to launcher/ unless absolute")
get_filename_component(_scripts_dir "${DECKBACK_SCRIPTS_DIR}" ABSOLUTE
                       BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
if(NOT IS_DIRECTORY "${_scripts_dir}")
  message(FATAL_ERROR "scripts dir not found: ${_scripts_dir}\n"
    "Pass -DDECKBACK_SCRIPTS_DIR=<path>. Without it the launcher has no page scripts to inject.")
endif()
file(GLOB _script_files CONFIGURE_DEPENDS "${_scripts_dir}/*.js")
if(NOT _script_files)
  message(FATAL_ERROR "no *.js under ${_scripts_dir} — the script registry would be empty")
endif()
set(_reg "#pragma once
// GENERATED by launcher/CMakeLists.txt from ${DECKBACK_SCRIPTS_DIR}/*.js. Do not edit; edit the .js.
namespace deckback {
struct EmbeddedScript { const char* name; const char* body; };
inline constexpr EmbeddedScript kEmbeddedScripts[] = {
")
foreach(_f ${_script_files})
  get_filename_component(_name "${_f}" NAME_WE)
  file(READ "${_f}" _js)
  string(FIND "${_js}" ")JS\"" _bad)
  if(NOT _bad EQUAL -1)
    message(FATAL_ERROR "${_f} contains the raw-string terminator )JS\" ")
  endif()
  string(APPEND _reg "  {\"${_name}\", R\"JS(${_js})JS\"},\n")
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_f}")
endforeach()
string(APPEND _reg "};
}  // namespace deckback
")
file(WRITE "${DECKBACK_GENERATED_DIR}/scripts_registry.hpp.in" "${_reg}")
configure_file("${DECKBACK_GENERATED_DIR}/scripts_registry.hpp.in"
               "${DECKBACK_GENERATED_DIR}/scripts_registry.hpp" COPYONLY)

option(DECKBACK_ASAN "Build with ASan+UBSan" OFF)
if(DECKBACK_ASAN)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

add_executable(deckback-launcher
  src/main.cpp
  src/log.cpp
  src/config.cpp
  src/platform.cpp
  src/watchdog.cpp
  src/cdm_fetcher.cpp
  src/sha256.cpp
  src/devtools.cpp
  src/scripts.cpp
  src/player.cpp
  src/navigator.cpp
  src/errorpage.cpp
  src/input.cpp
  src/keymap.cpp
  src/layers.cpp
  src/voice.cpp
  src/overlay.cpp
  src/haptic.cpp
  src/onboarding.cpp
  src/touch.cpp
  src/touchmode.cpp
  src/netprobe.cpp
  src/audio.cpp
  src/profile.cpp
)
target_include_directories(deckback-launcher PRIVATE src "${DECKBACK_GENERATED_DIR}")

find_package(Threads REQUIRED)
target_link_libraries(deckback-launcher PRIVATE Threads::Threads)

# Install rule so `ninja install` works under flatpak-builder (buildsystem: cmake-ninja).
# Installs to ${CMAKE_INSTALL_PREFIX}/bin — flatpak-builder sets the prefix to /app.
include(GNUInstallDirs)
install(TARGETS deckback-launcher RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

# Optional deps are detected at compile time via __has_include and linked only when present, so the
# launcher builds on a bare toolchain (CI free-runner) and gains D-Bus/HTTP on a full dev box.
find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
  pkg_check_modules(SYSTEMD IMPORTED_TARGET libsystemd)
  pkg_check_modules(CURL IMPORTED_TARGET libcurl)
  pkg_check_modules(PULSE IMPORTED_TARGET libpulse)
  if(SYSTEMD_FOUND)
    target_link_libraries(deckback-launcher PRIVATE PkgConfig::SYSTEMD)
  endif()
  if(CURL_FOUND)
    target_link_libraries(deckback-launcher PRIVATE PkgConfig::CURL)
  endif()
  if(PULSE_FOUND)
    target_link_libraries(deckback-launcher PRIVATE PkgConfig::PULSE)
    target_compile_definitions(deckback-launcher PRIVATE DECKBACK_HAVE_PULSE=1)
  endif()
  # libxcb powers Option B of disable_touch (holding gamescope's global touch mode at hover while our
  # window is focused). Optional: without it, touchmode.cpp compiles to a no-op and the page-level
  # pointer swallow still makes taps inert. Present in the freedesktop SDK the Flatpak builds against.
  pkg_check_modules(XCB IMPORTED_TARGET xcb)
  if(XCB_FOUND)
    target_link_libraries(deckback-launcher PRIVATE PkgConfig::XCB)
    target_compile_definitions(deckback-launcher PRIVATE DECKBACK_HAVE_XCB=1)
  endif()
endif()

include(CTest)
if(BUILD_TESTING)
  add_executable(config_test tests/config_test.cpp src/config.cpp src/log.cpp)
  target_include_directories(config_test PRIVATE src)
  add_test(NAME config_test COMMAND config_test)

  add_executable(log_test tests/log_test.cpp src/log.cpp)
  target_include_directories(log_test PRIVATE src)
  add_test(NAME log_test COMMAND log_test)

  add_executable(devtools_test tests/devtools_test.cpp src/devtools.cpp src/log.cpp)
  target_include_directories(devtools_test PRIVATE src tests)
  target_link_libraries(devtools_test PRIVATE Threads::Threads)
  add_test(NAME devtools_test COMMAND devtools_test)

  add_executable(player_test tests/player_test.cpp src/player.cpp src/devtools.cpp
                             src/netprobe.cpp src/layers.cpp src/scripts.cpp src/log.cpp)
  target_include_directories(player_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(player_test PRIVATE Threads::Threads)
  add_test(NAME player_test COMMAND player_test)

  add_executable(watchdog_test tests/watchdog_test.cpp src/watchdog.cpp src/log.cpp)
  target_include_directories(watchdog_test PRIVATE src)
  target_link_libraries(watchdog_test PRIVATE Threads::Threads)
  add_test(NAME watchdog_test COMMAND watchdog_test)

  # The Widevine CDM path rule (P7). `usable_cdm_path` mirrors the engine patch's check; the
  # near-miss cases ("/a/..b") are the ones worth a test.
  add_executable(cdm_fetcher_test tests/cdm_fetcher_test.cpp src/cdm_fetcher.cpp src/sha256.cpp
                                  src/log.cpp)
  target_include_directories(cdm_fetcher_test PRIVATE src)
  # cdm_fetcher.cpp compiles its libcurl download path in via __has_include, so the test binary has
  # to link libcurl too even though it never downloads anything.
  if(PkgConfig_FOUND AND CURL_FOUND)
    target_link_libraries(cdm_fetcher_test PRIVATE PkgConfig::CURL)
  endif()
  add_test(NAME cdm_fetcher_test COMMAND cdm_fetcher_test)

  add_executable(sha256_test tests/sha256_test.cpp src/sha256.cpp)
  target_include_directories(sha256_test PRIVATE src)
  add_test(NAME sha256_test COMMAND sha256_test)

  add_executable(profile_test tests/profile_test.cpp src/profile.cpp src/log.cpp)
  target_include_directories(profile_test PRIVATE src)
  add_test(NAME profile_test COMMAND profile_test)

  # Phase 3 input: pure keymap/direction/trigger logic. Pulls in devtools.cpp for key_supported() and
  # config.cpp to cover the keymap object parser.
  add_executable(input_test tests/input_test.cpp src/input.cpp src/keymap.cpp src/layers.cpp
                            src/touch.cpp src/voice.cpp src/overlay.cpp src/haptic.cpp
                            src/onboarding.cpp src/devtools.cpp src/scripts.cpp src/config.cpp
                            src/log.cpp)
  target_include_directories(input_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(input_test PRIVATE Threads::Threads)
  # Point one test at the real shipped config so app.json cannot drift away from the C++ keymap.
  target_compile_definitions(input_test PRIVATE
    DECKBACK_APP_JSON="${CMAKE_CURRENT_SOURCE_DIR}/../config/app.json")
  add_test(NAME input_test COMMAND input_test)

  # Phase 5 voice: the hold-to-talk state machine, duck-mode parsing, the mic-button probe, and the
  # VoiceController's CDP behaviour against a fake soft-mic button.
  add_executable(voice_test tests/voice_test.cpp src/voice.cpp src/devtools.cpp src/scripts.cpp
                            src/log.cpp)
  target_include_directories(voice_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(voice_test PRIVATE Threads::Threads)
  add_test(NAME voice_test COMMAND voice_test)

  # disable_touch: the embedded pointer-swallow script is present and covers the events that
  # navigate, and Option B's focus-class matcher only asserts hover over OUR windows. Built in stub
  # mode (no DECKBACK_HAVE_XCB) — the pure helper is compiled regardless of xcb.
  add_executable(touchmode_test tests/touchmode_test.cpp src/touchmode.cpp src/scripts.cpp
                                src/devtools.cpp src/log.cpp)
  target_include_directories(touchmode_test PRIVATE src "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(touchmode_test PRIVATE Threads::Threads)
  add_test(NAME touchmode_test COMMAND touchmode_test)

  # The kiosk failure state: a failed Page.navigate must be *seen* as failed (CDP reports it as a
  # successful command with an errorText field), and the injected Retry page must survive hostile
  # hot-swapped text.
  add_executable(errorpage_test tests/errorpage_test.cpp src/errorpage.cpp src/overlay.cpp
                                src/scripts.cpp src/devtools.cpp src/log.cpp)
  target_include_directories(errorpage_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(errorpage_test PRIVATE Threads::Threads)
  add_test(NAME errorpage_test COMMAND errorpage_test)

  # First-run controls card. The card must be derived from the live keymap, never hardcoded: a card
  # that contradicts a hot-swapped app.json teaches the user something false.
  add_executable(onboarding_test tests/onboarding_test.cpp src/onboarding.cpp src/keymap.cpp
                                 src/layers.cpp src/overlay.cpp src/scripts.cpp src/devtools.cpp
                                 src/config.cpp src/log.cpp)
  target_include_directories(onboarding_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(onboarding_test PRIVATE Threads::Threads)
  # Read the real shipped config, so a keymap change cannot make the card advertise a dead control.
  target_compile_definitions(onboarding_test PRIVATE
    DECKBACK_APP_JSON="${CMAKE_CURRENT_SOURCE_DIR}/../config/app.json")
  add_test(NAME onboarding_test COMMAND onboarding_test)

  # Touch-lock feedback: the CDP-injected toast (escaping is the whole risk) and the FF_RUMBLE
  # effect construction. The rumble ioctls themselves need a real pad and belong to the on-Deck tier.
  add_executable(overlay_test tests/overlay_test.cpp src/overlay.cpp src/haptic.cpp
                              src/scripts.cpp src/devtools.cpp src/log.cpp)
  target_include_directories(overlay_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(overlay_test PRIVATE Threads::Threads)
  add_test(NAME overlay_test COMMAND overlay_test)

  # The shared header-only helpers (util.hpp): the DECKBACK_EXTRA_ARGS splitter and the escapes.
  add_executable(util_test tests/util_test.cpp)
  target_include_directories(util_test PRIVATE src)
  add_test(NAME util_test COMMAND util_test)

  # The page-script registry (scripts.cpp): ScriptParams JSON/escaping, render()'s (body)(params)
  # shape, the embedded defaults, and runtime override from a scripts dir.
  add_executable(scripts_test tests/scripts_test.cpp src/scripts.cpp src/devtools.cpp src/log.cpp)
  target_include_directories(scripts_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(scripts_test PRIVATE Threads::Threads)
  add_test(NAME scripts_test COMMAND scripts_test)

  # The Navigator's "already on the app" needle — the predicate behind every re-navigation.
  add_executable(navigator_test tests/navigator_test.cpp src/navigator.cpp src/errorpage.cpp
                                src/overlay.cpp src/scripts.cpp src/devtools.cpp src/log.cpp)
  target_include_directories(navigator_test PRIVATE src tests "${DECKBACK_GENERATED_DIR}")
  target_link_libraries(navigator_test PRIVATE Threads::Threads)
  add_test(NAME navigator_test COMMAND navigator_test)

  # Tests assert() their invariants. CI builds Release, which defines NDEBUG and would both compile
  # the assertions out (tests silently pass) and trip -Werror=unused-variable. Force NDEBUG off for
  # test targets so assertions stay live regardless of the build type.
  foreach(t config_test log_test devtools_test player_test watchdog_test input_test sha256_test profile_test voice_test overlay_test errorpage_test onboarding_test cdm_fetcher_test touchmode_test util_test navigator_test scripts_test)
    target_compile_options(${t} PRIVATE -UNDEBUG)
  endforeach()
endif()
