cmake_minimum_required(VERSION 3.28)
project(deckback_launcher LANGUAGES CXX)

# Out-of-tree code (doc §13.2): C++23, dual-clean on Clang >=18 and GCC 14, -Wall -Wextra -Werror.
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

add_compile_options(-Wall -Wextra -Werror)

# CMake >=3.28 scans every C++20+ TU for module imports by default. This project uses no modules, so
# the scan is pure overhead: an extra preprocess of every file, whose .ddi.i output is larger than
# the object it produces (enough to exhaust a 32G tmpfs on a sanitizer build).
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)

set(DECKBACK_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")

# Embed a JS file as a C++ raw-string constant so a missing/unreadable file can NEVER silently
# disable the behaviour on the Deck (it fails the build instead). Each script is the single source of
# truth — the launcher compiles it in and `just smoke` injects the same file.
#
# The path is overridable because `launcher/` is not always built inside the repo. flatpak-builder
# copies each module's sources FLAT into /run/build/<module>/, so `../config/` does not exist there
# and `file(READ)` fails with CMake's own opaque "file failed to open for reading". The manifest
# passes -D<cache_var>=<basename> and adds the script as a second source. Default stays the in-repo
# layout, so `just launcher build` is unchanged.
function(deckback_embed_js cache_var default_rel header symbol fail_msg)
  set("${cache_var}" "${default_rel}"
      CACHE FILEPATH "JS to embed as ${symbol}, relative to launcher/ unless absolute")
  get_filename_component(_p "${${cache_var}}" ABSOLUTE BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
  if(NOT EXISTS "${_p}")
    message(FATAL_ERROR "embedded script not found: ${_p}\n"
      "Pass -D${cache_var}=<path>. ${fail_msg}")
  endif()
  file(READ "${_p}" _js)
  # A `)JS"` inside the script would terminate the raw literal early and produce a nonsense
  # diagnostic a hundred lines away. Refuse at configure time instead.
  string(FIND "${_js}" ")JS\"" _bad)
  if(NOT _bad EQUAL -1)
    message(FATAL_ERROR "${_p} contains the raw-string terminator )JS\" ")
  endif()
  file(WRITE "${DECKBACK_GENERATED_DIR}/${header}.in"
"#pragma once
// GENERATED by launcher/CMakeLists.txt from ${default_rel}. Do not edit; edit the .js.
namespace deckback {
inline constexpr const char* ${symbol} = R\"JS(${_js})JS\";
}  // namespace deckback
")
  # COPYONLY only rewrites when the content differs, so a plain re-configure does not force a rebuild.
  configure_file("${DECKBACK_GENERATED_DIR}/${header}.in"
                 "${DECKBACK_GENERATED_DIR}/${header}" COPYONLY)
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_p}")
endfunction()

# Embed the whole config/scripts/ directory as a name->body registry (scripts_registry.hpp), the
# single source of truth for every page-side script the launcher injects (ScriptLibrary, scripts.cpp).
# Same fail-closed rationale as deckback_embed_js: a missing/unreadable script fails the build, never
# silently ships a disabled behaviour. flatpak-builder copies the module's sources FLAT, so the dir is
# a cache var the manifest overrides to the flat basename ("scripts") and adds as a `type: dir` source.
set(DECKBACK_SCRIPTS_DIR "../config/scripts"
    CACHE PATH "Directory of page scripts to embed, relative to launcher/ unless absolute")
get_filename_component(_scripts_dir "${DECKBACK_SCRIPTS_DIR}" ABSOLUTE
                       BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
if(NOT IS_DIRECTORY "${_scripts_dir}")
  message(FATAL_ERROR "scripts dir not found: ${_scripts_dir}\n"
    "Pass -DDECKBACK_SCRIPTS_DIR=<path>. Without it the launcher has no page scripts to inject.")
endif()
file(GLOB _script_files CONFIGURE_DEPENDS "${_scripts_dir}/*.js")
if(NOT _script_files)
  message(FATAL_ERROR "no *.js under ${_scripts_dir} — the script registry would be empty")
endif()
set(_reg "#pragma once
// GENERATED by launcher/CMakeLists.txt from ${DECKBACK_SCRIPTS_DIR}/*.js. Do not edit; edit the .js.
namespace deckback {
struct EmbeddedScript { const char* name; const char* body; };
inline constexpr EmbeddedScript kEmbeddedScripts[] = {
")
foreach(_f ${_script_files})
  get_filename_component(_name "${_f}" NAME_WE)
  file(READ "${_f}" _js)
  string(FIND "${_js}" ")JS\"" _bad)
  if(NOT _bad EQUAL -1)
    message(FATAL_ERROR "${_f} contains the raw-string terminator )JS\" ")
  endif()
  string(APPEND _reg "  {\"${_name}\", R\"JS(${_js})JS\"},\n")
  set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_f}")
endforeach()
string(APPEND _reg "};
}  // namespace deckback
")
file(WRITE "${DECKBACK_GENERATED_DIR}/scripts_registry.hpp.in" "${_reg}")
configure_file("${DECKBACK_GENERATED_DIR}/scripts_registry.hpp.in"
               "${DECKBACK_GENERATED_DIR}/scripts_registry.hpp" COPYONLY)

# Compile the real version string in, from the repo's VERSION file (single source of truth), so
# `--version` and the self-updater's logging report the truth. flatpak-builder copies the module FLAT
# so `../VERSION` may be absent there — the manifest adds it as a `file` source at ./VERSION, and
# -DDECKBACK_VERSION=<x> overrides. Falls back to a dev marker so a bare `just launcher` still builds.
set(DECKBACK_VERSION "" CACHE STRING "Version to compile in (else read from the VERSION file)")
if(NOT DECKBACK_VERSION)
  foreach(_vf "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" "${CMAKE_CURRENT_SOURCE_DIR}/../VERSION")
    if(EXISTS "${_vf}")
      file(STRINGS "${_vf}" DECKBACK_VERSION LIMIT_COUNT 1)
      set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS "${_vf}")
      break()
    endif()
  endforeach()
endif()
if(NOT DECKBACK_VERSION)
  set(DECKBACK_VERSION "0.0.0-dev")
endif()
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/version.hpp.in"
               "${DECKBACK_GENERATED_DIR}/version.hpp" @ONLY)

option(DECKBACK_ASAN "Build with ASan+UBSan" OFF)
if(DECKBACK_ASAN)
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

find_package(Threads REQUIRED)

# Optional deps are detected at compile time via __has_include and linked only when present, so the
# launcher builds on a bare toolchain (CI free-runner) and gains D-Bus/HTTP on a full dev box.
# Detected BEFORE deckback_core so the library can carry them PUBLIC to every dependent.
find_package(PkgConfig QUIET)
if(PkgConfig_FOUND)
  pkg_check_modules(SYSTEMD IMPORTED_TARGET libsystemd)
  pkg_check_modules(CURL IMPORTED_TARGET libcurl)
  pkg_check_modules(PULSE IMPORTED_TARGET libpulse)
  # libxcb powers Option B of disable_touch (holding gamescope's global touch mode at hover while our
  # window is focused). Optional: without it, touchmode.cpp compiles to a no-op and the page-level
  # pointer swallow still makes taps inert. Present in the freedesktop SDK the Flatpak builds against.
  pkg_check_modules(XCB IMPORTED_TARGET xcb)
endif()

# Everything except main.cpp. ONE source list: the executable and all ~20 test binaries link this,
# so adding a file, a dependency or a compile definition is a single edit. Previously each target
# relisted the sources it needed by hand -- 122 listings of 29 files, log.cpp named 19 times -- which
# meant a new dependency edge was a scavenger hunt across the whole file and test link lines drifted
# from what the code actually needed.
add_library(deckback_core STATIC
  src/log.cpp
  src/json.cpp
  src/config.cpp
  src/config_store.cpp
  src/caption_settings.cpp
  src/platform.cpp
  src/updater.cpp
  src/simwatch.cpp  # sim-only: the --selftest-watch reconnect driver (isolated from updater.cpp)
  src/updateprompt.cpp
  src/watchdog.cpp
  src/cdm_fetcher.cpp
  src/sha256.cpp
  src/devtools.cpp
  src/scripts.cpp
  src/player.cpp
  src/navigator.cpp
  src/errorpage.cpp
  src/input.cpp
  src/keymap.cpp
  src/layers.cpp
  src/overlay.cpp
  src/haptic.cpp
  src/onboarding.cpp
  src/osdmenu.cpp
  src/about.cpp
  src/touch.cpp
  src/touchmode.cpp
  src/netprobe.cpp
  src/audio.cpp
  src/profile.cpp
)
# PUBLIC: dependents get the include dirs, the threads dep and the optional-backend defines for free.
target_include_directories(deckback_core PUBLIC src "${DECKBACK_GENERATED_DIR}")
target_link_libraries(deckback_core PUBLIC Threads::Threads)
if(SYSTEMD_FOUND)
  target_link_libraries(deckback_core PUBLIC PkgConfig::SYSTEMD)
endif()
if(CURL_FOUND)
  target_link_libraries(deckback_core PUBLIC PkgConfig::CURL)
endif()
if(PULSE_FOUND)
  target_link_libraries(deckback_core PUBLIC PkgConfig::PULSE)
  target_compile_definitions(deckback_core PUBLIC DECKBACK_HAVE_PULSE=1)
endif()
if(XCB_FOUND)
  target_link_libraries(deckback_core PUBLIC PkgConfig::XCB)
  target_compile_definitions(deckback_core PUBLIC DECKBACK_HAVE_XCB=1)
endif()

add_executable(deckback-launcher src/main.cpp)
target_link_libraries(deckback-launcher PRIVATE deckback_core)

# Install rule so `ninja install` works under flatpak-builder (buildsystem: cmake-ninja).
# Installs to ${CMAKE_INSTALL_PREFIX}/bin -- flatpak-builder sets the prefix to /app.
include(GNUInstallDirs)
install(TARGETS deckback-launcher RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

include(CTest)
if(BUILD_TESTING)
  # Tests assert() their invariants. CI builds Release, which defines NDEBUG and would both compile
  # the assertions out (tests silently pass) and trip -Werror=unused-variable. -UNDEBUG on the test
  # TU keeps assertions live regardless of the build type; src/ contains no assert(), so building
  # deckback_core with NDEBUG costs no coverage.
  function(deckback_test name)
    add_executable(${name} tests/${name}.cpp)
    target_link_libraries(${name} PRIVATE deckback_core)
    target_include_directories(${name} PRIVATE tests)
    target_compile_options(${name} PRIVATE -UNDEBUG)
    add_test(NAME ${name} COMMAND ${name})
  endfunction()

  deckback_test(json_test)
  deckback_test(config_test)
  deckback_test(config_store_test)
  deckback_test(caption_settings_test)
  deckback_test(caption_fuzz_test)
  deckback_test(log_test)
  deckback_test(devtools_test)
  deckback_test(player_test)
  deckback_test(watchdog_test)
  deckback_test(sha256_test)
  deckback_test(profile_test)
  deckback_test(util_test)
  deckback_test(about_test)
  deckback_test(scripts_test)
  deckback_test(navigator_test)
  deckback_test(overlay_test)
  deckback_test(errorpage_test)
  deckback_test(osdmenu_test)
  deckback_test(cdm_fetcher_test)
  deckback_test(touchmode_test)
  # The portal path is NOT verified here -- that is a Deck job (durable/self-update.md:
  # --selftest-update + a staging-repo round-trip). These pin what holds off-Deck: the pure
  # Progress.status decode (2 == Done), the factory, and a crash-free / idempotent lifecycle.
  deckback_test(updater_test)
  # Self-update notify UI: semantic version compare, GitHub-releases parse, changelog summary, the
  # show-card/show-dot decision, and the dismissal state files.
  deckback_test(updateprompt_test)

  # These two read the real shipped config, so a keymap change cannot make the launcher and the
  # first-run card advertise a control that does not work.
  deckback_test(input_test)
  deckback_test(onboarding_test)
  foreach(t input_test onboarding_test)
    target_compile_definitions(${t} PRIVATE
      DECKBACK_APP_JSON="${CMAKE_CURRENT_SOURCE_DIR}/../config/app.json")
  endforeach()

  find_program(NODE_EXECUTABLE NAMES node nodejs)
  if(NODE_EXECUTABLE)
    add_test(NAME js_toggle_captions
             COMMAND ${NODE_EXECUTABLE}
                     ${CMAKE_CURRENT_SOURCE_DIR}/../tests/js/toggle_captions.test.js)
  else()
    message(STATUS "node not found — skipping the JS caption test (js_toggle_captions)")
  endif()
endif()
